<?xml version="1.0" encoding="utf-8"?>
<linearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.edu.ifspsaocarlos.sdm.fragchat.view.otherActivities.ActivityEnviar">

    <TextView
        android:id="@+id/tv_origem_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remetente"/>
    <EditText
        android:id="@+id/et_origem_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/remetente_hint"/>
    <TextView
        android:id="@+id/tv_destino_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destinatario"/>
    <EditText
        android:id="@+id/et_destino_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/destinatatario_hint"/>
    <TextView
        android:id="@+id/tv_assunto_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assunto"/>
    <EditText
        android:id="@+id/et_assunto_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/assunto_hint"/>
    <TextView
        android:id="@+id/tv_corpo_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagem"/>
    <EditText
        android:id="@+id/et_corpo_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mensagem_hint"/>
    <Button
        android:id="@+id/bt_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"/>
</linearLayout>
