<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/profile"
            android:checked="true"/>
        <item
            android:id="@+id/nav_messenger"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/messenger"
            android:checked="false"/>
        <item
            android:id="@+id/nav_update"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/register"
            android:checked="false"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/logout"
            android:checked="false"/>
    </group>
</menu>