<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_old">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/viewA"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:background="@android:color/holo_blue_dark">

                <ImageView android:src="@drawable/logo_ifsp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_height_size_small"
                    android:layout_marginBottom="@dimen/main_padding_double"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/logo" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewB"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:backgroundTint="#fffff6"
                tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/programTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/app_name"
                    android:textColor="#000"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:orientation="vertical">

                    <!-- Label do Email -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">
                        <android.support.design.widget.TextInputEditText android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/emailhint" />
                    </android.support.design.widget.TextInputLayout>

                    <!-- Label do Password -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">
                        <android.support.design.widget.TextInputEditText android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/passwordhint"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:padding="12dp"
                        android:text="@string/btnLogin"/>

                    <TextView android:id="@+id/link_signup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/link_signup"
                        android:gravity="center"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/viewUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_anchor="@id/viewA"
        app:layout_anchorGravity="center|left">

        <ProgressBar
            android:id="@+id/pb_carregando"
            style="@style/Widget.AppCompat.ProgressBar.AppTheme.Indeterminate"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center"

            android:elevation="16dp"
            app:layout_anchor="@id/viewUserID"
            app:layout_anchorGravity="center"
            android:visibility="gone"
            tools:targetApi="lollipop">
        </ProgressBar>

        <!--style="?android:attr/indeterminateProgressStyle"-->
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>