<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_height_size_small"
    android:minHeight="?attr/actionBarSize"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/toolbar_color"
    app:contentInsetEndWithActions="0dp"
    app:contentInsetStartWithNavigation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nav_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/nav_logo"
            android:layout_marginStart="@dimen/main_padding"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="@dimen/main_medium_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nav_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/nav_logo"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/main_padding_double"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="@dimen/main_small_title"
            android:textStyle="bold"  />

        <ImageView
            android:id="@+id/nav_logo"
            android:layout_width="@dimen/header_icon_width"
            android:layout_height="@dimen/header_icon_width"
            android:layout_alignParentStart="true"
            android:background="@drawable/draw_circular_border_imageview"
            android:elevation="@dimen/header_profile_elevation"
            android:layout_centerVertical="true"
            android:padding="@dimen/main_padding"
            android:src="@android:drawable/sym_action_chat"
            android:contentDescription="@string/desc_imgphoto" />

        <ProgressBar
            android:id="@+id/nav_pb_carregando"
            style="@style/Widget.AppCompat.ProgressBar.AppTheme.Indeterminate"
            android:layout_width="@dimen/header_progress_size"
            android:layout_height="@dimen/header_progress_size"
            android:background="@drawable/draw_circular_border_imageview"
            android:elevation="@dimen/header_main_elevation"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

        <ImageView android:id="@+id/nav_pb_ok"
            android:src="@drawable/ic_fab_complete"
            android:layout_width="@dimen/header_progress_size"
            android:layout_height="@dimen/header_progress_size"
            android:elevation="@dimen/header_main_elevation"
            android:alpha="1.0"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:contentDescription="@string/desc_imgok" />

    </RelativeLayout>

</android.support.v7.widget.Toolbar>